syntax = "proto3";

option csharp_namespace = "HelloDotNet6.Data";

package shopping;

// The greeting service definition.
service Shopping {
	rpc GetInventory (GetInventoryRequest) returns (GetInventoryResponse);
  // Sends a greeting
  //rpc SayHello (HelloRequest) returns (HelloReply);
}

message GetInventoryRequest {
	int64 ProductId = 1;
}

message GetInventoryResponse {
	int64 ProductId = 1;
	int32 StockQuantity = 2;
}

// The request message containing the user's name.
//message HelloRequest {
//  string name = 1;
//}

// The response message containing the greetings.
//message HelloReply {
//  string message = 1;
//}
